@@ -58,6 +58,10 @@ SptSleeptime=10
 # HSV values for extracting certain colors from screenshots.
 spt_LowerValHSV_Red="121,189,106"
 spt_UpperValHSV_Red="179,242,255"
-
 spt_BW_Treshold_Red=127
+
+spt_LowerValHSV_Green="76,38,157"
+spt_UpperValHSV_Green="77,235,255"
+spt_BW_Treshold_Green=182
+
 spt_BW_Treshold_White=178
