@@ -20,8 +20,10 @@ eval SptSleeptime=`./functions/get_variable_wrapper.py SptSleeptime`
 
 eval spt_LowerValHSV_Red=`./functions/get_variable_wrapper.py spt_LowerValHSV_Red`
 eval spt_UpperValHSV_Red=`./functions/get_variable_wrapper.py spt_UpperValHSV_Red`
-
 eval spt_BW_Treshold_Red=`./functions/get_variable_wrapper.py spt_BW_Treshold_Red`
+eval spt_LowerValHSV_Green=`./functions/get_variable_wrapper.py spt_LowerValHSV_Green`
+eval spt_UpperValHSV_Green=`./functions/get_variable_wrapper.py spt_UpperValHSV_Green`
+eval spt_BW_Treshold_Green=`./functions/get_variable_wrapper.py spt_BW_Treshold_Green`
 eval spt_BW_Treshold_White=`./functions/get_variable_wrapper.py spt_BW_Treshold_White`
 
 # Override default value
@@ -53,7 +55,7 @@ fi
 prepare_tmpdir $winid
 
 # Update var below which contain $TmpDir var in the path.
-eval SptTmpScrFile=$SptTmpScrFile
+eval SptTmpScrFile="${SptTmpScrFile}"
 
 
 if $TEST_MODE ; then
@@ -61,116 +63,129 @@ if $TEST_MODE ; then
     SptTmpScrFile=${TestsDir}"/"`basename "${SptTmpScrFile}"`
 fi
 
-tmpFileExtension=".${SptTmpScrFile##*.}"
-tmpFileName=`basename "${SptTmpScrFile}" "${tmpFileExtension}"`
-tmpFileDir=`dirname $(readlink -f ${SptTmpScrFile})`
+tmpScr_FileExtension=".${SptTmpScrFile##*.}"
+tmpScr_FileName=`basename "${SptTmpScrFile}" "${tmpScr_FileExtension}"`
+tmpScr_FileDir=`dirname $(readlink -f ${SptTmpScrFile})`
 
-#SptTmpScrFile1=${tmpFileDir}"/"${tmpFileName}"_tmp1"${tmpFileExtension}   # Remove later. See the line 87 in spawn-tracker.sh
-#SptTmpScrFile2=${tmpFileDir}"/"${tmpFileName}"_tmp2"${tmpFileExtension}   # Remove later. See the line 114 in spawn-tracker.sh
+tmpScrBW_RedText=${tmpScr_FileDir}"/"${tmpScr_FileName}"_red_bw"${tmpScr_FileExtension}
+tmpScrBW_GreenText=${tmpScr_FileDir}"/"${tmpScr_FileName}"_green_bw"${tmpScr_FileExtension}
+tmpScrBW_WhiteText=${tmpScr_FileDir}"/"${tmpScr_FileName}"_white_bw"${tmpScr_FileExtension}
 
-tmpScr_RedText_BW_File=${tmpFileDir}"/"${tmpFileName}"_red_bw"${tmpFileExtension}
-tmpScr_WhiteText_BW_File=${tmpFileDir}"/"${tmpFileName}"_white_bw"${tmpFileExtension}
-
-tmpScr_RedText_txtFile=${tmpFileDir}"/"`basename "$tmpScr_RedText_BW_File"`".txt"
-tmpScr_WhiteText_txtFile=${tmpFileDir}"/"`basename "$tmpScr_WhiteText_BW_File"`".txt"
+tmpOCR_MobsMessages=${tmpScr_FileDir}"/OCRed_MobsMessages.txt"
+tmpOCR_ChatPrompt=${tmpScr_FileDir}"/OCRed_ChatPrompt.txt"
 
 
-#TriggerPhrase_Spawn="Ultra [a-z ]* has spawned"
-TriggerPhrase_Spawn="has spawned"
-TriggerPhrase_Chat="Press \[ENTER\] or click here"
-logger "DEBUG" "Set value of variables: TriggerPhrase_Spawn=\"$TriggerPhrase_Spawn\"; TriggerPhrase_Chat=\"$TriggerPhrase_Chat\""
+# Workaround to perform only one call to tesseract to recognise two BW screenshots:
+# few images can be passed only as file list in separate txt file. 
+tmpFileList_MobsMessages=${tmpScr_FileDir}"/filesToOCR_MobsMsgs.txt"
+echo $tmpScrBW_RedText    > "${tmpFileList_MobsMessages}"
+echo $tmpScrBW_GreenText >> "${tmpFileList_MobsMessages}"
+
+
+declare -a TriggerPhrases_Mobs
+declare -a FoundMessages 
+
+#TriggerPhrases_Mobs+=("Ultra [a-z ]* has spawned")
+TriggerPhrases_Mobs+=("has spawned")
+TriggerPhrases_Mobs+=("was defeated")
+TriggerPhrase_ChatPrompt="Press \[ENTER\] or click here"
+
+logger "DEBUG" "Set values of variables: TriggerPhrases_Mobs[0]=\"${TriggerPhrases_Mobs[0]}\""
+logger "DEBUG" "                         TriggerPhrases_Mobs[1]=\"${TriggerPhrases_Mobs[1]}\""
+logger "DEBUG" "                         TriggerPhrase_ChatPrompt=\"$TriggerPhrase_ChatPrompt\""
+
 
 while true
-do 
+do
+    # Erase array
+    FoundMessages=()
+
+    # Get a screenshot
     if ! $TEST_MODE ; then
+        # Take a screenshot
         sleep $SptSleeptime 
 
-        import -silent -window $winid -gravity SouthWest -crop 25x15%+0+0 +repage $SptTmpScrFile 2> >(errAbsorb)
+        import -silent -window $winid -gravity SouthWest -crop 25x15%+0+0 +repage "${SptTmpScrFile}" 2> >(errAbsorb)
         screentime=`date +%Y%m%d-%H-%M-%S`
         logger "DEBUG" "A screenshot has been taken. Screentime is $screentime."
     else
-        convert $SptTmpScrFile -gravity SouthWest -crop 25x15%+0+0 +repage $SptTmpScrFile 2> >(errAbsorb)
+        # Prepare received screen file (crop it)
+        convert "${SptTmpScrFile}" -gravity SouthWest -crop 25x15%+0+0 +repage "${SptTmpScrFile}" 2> >(errAbsorb)
     fi
 
-    # Convert screenshot to b/w image.
-    ##convert $SptTmpScrFile -colorspace YCbCr -channel Red -fx "0.1" +channel \ 
-    ##                    -channel R -separate \ 
-    ##                    -brightness-contrast 0x50  $tmpScr_RedText_BW_File
+    # Convert screenshot to B/W images (extract red and green text)
+    `./functions/imgTransform.py -i "${SptTmpScrFile}" -x "${spt_LowerValHSV_Red}"   "${spt_UpperValHSV_Red}"   -b $spt_BW_Treshold_Red   -o "${tmpScrBW_RedText}"`   2> >(errAbsorb)
+    `./functions/imgTransform.py -i "${SptTmpScrFile}" -x "${spt_LowerValHSV_Green}" "${spt_UpperValHSV_Green}" -b $spt_BW_Treshold_Green -o "${tmpScrBW_GreenText}"` 2> >(errAbsorb)
 
-    #convert $SptTmpScrFile -colorspace YCbCr -channel Red -fx "0.1" +channel $SptTmpScrFile1 2> >(errAbsorb)
-    #convert $SptTmpScrFile1 -channel R -separate $SptTmpScrFile1 2> >(errAbsorb)
-    #convert $SptTmpScrFile1 -brightness-contrast 0x50 $SptTmpScrFile1 2> >(errAbsorb)
-    #convert $SptTmpScrFile1 -negate -threshold 60% $tmpScr_RedText_BW_File 2> >(errAbsorb)
-    `./functions/imgTransform.py -i $SptTmpScrFile -x $spt_LowerValHSV_Red $spt_UpperValHSV_Red -b $spt_BW_Treshold_Red -o $tmpScr_RedText_BW_File` 2> >(errAbsorb)
-
-    # Search the TriggerPhrase_Spawn
+    # OCR both B/W screenfiles to text
     if [ "$SCRIPT_LOGGING_LEVEL" = "DEBUG" ]; then 
 
-        logger "DEBUG" "Start OCR process (searching phrase about spawning: $TriggerPhrase_Spawn) .."
+        logger "DEBUG" "Start OCR process for tmpFileList_MobsMessages (searching phrases about spawning/dying mobs).."
         tmpvar=`(/usr/bin/time -o /dev/fd/3 -f "[%E real, %U user, %S sys  (P: %P) (M,t: %M[kb] %t[kb]) (c,w: %c %w) (W: %W) (O: %O) (F,R: %F %R) ]" \
-               tesseract -l eng -c textord_min_xheight=4 $tmpScr_RedText_BW_File - >$tmpScr_RedText_txtFile quiet 3>&2 2> >(errAbsorb)  ) 2>&1` 
+               tesseract -l eng -c textord_min_xheight=4 -c page_separator="" "${tmpFileList_MobsMessages}" - >"${tmpOCR_MobsMessages}" quiet 3>&2 2> >(errAbsorb)  ) 2>&1` 
         logger "DEBUG" "OCR process completed: $tmpvar"
 
     else
-        tesseract -l eng -c textord_min_xheight=4 $tmpScr_RedText_BW_File - >$tmpScr_RedText_txtFile quiet 2> >(errAbsorb)
+        tesseract -l eng -c textord_min_xheight=4 -c page_separator="" "${tmpFileList_MobsMessages}" - >"${tmpOCR_MobsMessages}" quiet 2> >(errAbsorb)
     fi
-    foundPhrase=`grep -iP "$TriggerPhrase_Spawn" $tmpScr_RedText_txtFile`
 
-
-    if [ -n "${foundPhrase}" ]; then
-        # The TriggerPhrase_Spawn was found.
-        # Search TriggerPhrase_Chat (Chat check. Need to check the message about spawn is new).
-        logger "DEBUG" "Found the TriggerPhrase_Spawn: \"$foundPhrase\"."
-
-        #convert $SptTmpScrFile -brightness-contrast 0x70 $SptTmpScrFile2 2> >(errAbsorb)
-        #convert $SptTmpScrFile2 -colorspace Gray -negate -threshold 70% $tmpScr_WhiteText_BW_File 2> >(errAbsorb)
-        `./functions/imgTransform.py -i $SptTmpScrFile -n $spt_BW_Treshold_White -o $tmpScr_WhiteText_BW_File` 2> >(errAbsorb)
-
-        if [ "$SCRIPT_LOGGING_LEVEL" = "DEBUG" ] && ! $TEST_MODE ; then 
-            bkpDir=$LogDir"/"$screentime"-spawn"
-            mkdir -p $bkpDir
-            cp $SptTmpScrFile              $bkpDir"/"$screentime"-"`basename "${SptTmpScrFile}"`
-            #cp $SptTmpScrFile1             $bkpDir"/"$screentime"-"`basename "${SptTmpScrFile1}"`
-            #cp $SptTmpScrFile2             $bkpDir"/"$screentime"-"`basename "${SptTmpScrFile2}"`
-            cp $tmpScr_RedText_BW_File     $bkpDir"/"$screentime"-"`basename "${tmpScr_RedText_BW_File}"`
-            cp $tmpScr_WhiteText_BW_File   $bkpDir"/"$screentime"-"`basename "${tmpScr_WhiteText_BW_File}"`
-            cp $tmpScr_RedText_txtFile     $bkpDir"/"$screentime"-"`basename "${tmpScr_RedText_txtFile}"`
-            cp $tmpScr_WhiteText_txtFile   $bkpDir"/"$screentime"-"`basename "${tmpScr_WhiteText_txtFile}"`
+    # Search phrases about spawning/dying mobs
+    for phrase in "${TriggerPhrases_Mobs[@]}"; do
+        line=`grep -iP "$phrase" "${tmpOCR_MobsMessages}"`
+        if [ -n "${line}" ]; then
+            FoundMessages+=("$line")
         fi
+    done
+    
+    if [ ${#FoundMessages[@]} -eq 0 ]; then
+        logger "DEBUG" "No messages about mobs found in the current screenshot."
+    fi
 
-        # Search the TriggerPhrase_Chat (chat check)
+    for foundMsg in "${FoundMessages[@]}"; do
+        # The phrase about spawning/dying mobs was found.
+        # Search TriggerPhrase_ChatPrompt (Need to check the chat prompt to know if the found message about mob is new).
+
+        logger "DEBUG" "Found a trigger phrase about a mob: \"$foundMsg\"."
+
+        # Convert screenshot to B/W image (extract white text)
+        `./functions/imgTransform.py -i "${SptTmpScrFile}" -n $spt_BW_Treshold_White -o "${tmpScrBW_WhiteText}"` 2> >(errAbsorb)
+
+        # Search the TriggerPhrase_ChatPrompt
         if [ "$SCRIPT_LOGGING_LEVEL" = "DEBUG" ]; then 
 
-            logger "DEBUG" "Start OCR process for the second image. Phrase for search: \"$TriggerPhrase_Chat\") .."
-#            tmpvar=`(/usr/bin/time -o /dev/fd/3 -f "[%E real, %U user, %S sys  (P: %P) (M,t: %M[kb] %t[kb]) (c,w: %c %w) (W: %W) (O: %O) (F,R: %F %R) ]" \
-#                   tesseract -l eng -c textord_min_xheight=4 $tmpScr_WhiteText_BW_File - quiet 3>&2 2> >(errAbsorb) |  grep -i "$TriggerPhrase_Chat" | wc -l ) 2>&1` 
-
+            logger "DEBUG" "Start OCR process for the tmpScrBW_WhiteText (searching the chat prompt).."
             tmpvar=`(/usr/bin/time -o /dev/fd/3 -f "[%E real, %U user, %S sys  (P: %P) (M,t: %M[kb] %t[kb]) (c,w: %c %w) (W: %W) (O: %O) (F,R: %F %R) ]" \
-                   tesseract -l eng -c textord_min_xheight=4 $tmpScr_WhiteText_BW_File - >$tmpScr_WhiteText_txtFile quiet 3>&2 2> >(errAbsorb) ) 2>&1` 
-
-
+                   tesseract -l eng -c textord_min_xheight=4 "${tmpScrBW_WhiteText}" - >"${tmpOCR_ChatPrompt}" quiet 3>&2 2> >(errAbsorb) ) 2>&1` 
             logger "DEBUG" "OCR process completed: `echo "$tmpvar" | grep real`"
-            result=`echo "$tmpvar" | grep -v real`
 
         else
-            #result=`tesseract -l eng -c textord_min_xheight=4 $tmpScr_WhiteText_BW_File - quiet 2> >(errAbsorb) |  grep -i "$TriggerPhrase_Chat" | wc -l`
-            result=`tesseract -l eng -c textord_min_xheight=4 $tmpScr_WhiteText_BW_File - >$tmpScr_WhiteText_txtFile quiet 2> >(errAbsorb) `
+            result=`tesseract -l eng -c textord_min_xheight=4 "${tmpScrBW_WhiteText}" - >"${tmpOCR_ChatPrompt}" quiet 2> >(errAbsorb) `
         fi
-        foundChatPhrase=`grep -iP "$TriggerPhrase_Chat" $tmpScr_WhiteText_txtFile`
+        foundChatPrompt=`grep -iP "${TriggerPhrase_ChatPrompt}" "${tmpOCR_ChatPrompt}"`
 
-        if [ -n "${foundChatPhrase}" ]; then
-        #if [ $result -ge 1 ]; then
-            logger "INFO" "Ultra mob was spawned at $screentime. Found message is: $foundPhrase"
-            echo          "Ultra mob was spawned at $screentime. Found message is: $foundPhrase" >> $SpawnLogFile
-            echo          "Ultra mob was spawned at $screentime. Found message is: $foundPhrase" 
+        # Logging the result
+        if [ "${foundChatPrompt}" ]; then
+            logger "DEBUG" "Found the chat prompt."
+            logger "INFO" "Found message about a mob at $screentime : $foundMsg"
+            echo          "Found message about a mob at $screentime : $foundMsg" >> $SpawnLogFile
+            echo          "Found message about a mob at $screentime : $foundMsg" 
             if ! $TEST_MODE ; then sleep 60 ; fi
         else
-            logger "DEBUG" "The TriggerPhrase_Chat not found in current screenshot. Seems the message about spawn is old."
+            logger "DEBUG" "The TriggerPhrase_ChatPrompt not found in current screenshot. Seems the found message about a mob is old."
         fi
 
-    else
-        logger "DEBUG" "The TriggerPhrase_Spawn not found in current screenshot."
-    fi
+        # Debug part
+        if [ "$SCRIPT_LOGGING_LEVEL" = "DEBUG" ] && ! $TEST_MODE ; then 
+            bkpDir="${LogDir}""/"$screentime"-mobs_message"
+            mkdir -p "${bkpDir}"
+            cp "${SptTmpScrFile}"       "${bkpDir}""/"$screentime"-"`basename "${SptTmpScrFile}"`
+            cp "${tmpScrBW_RedText}"    "${bkpDir}""/"$screentime"-"`basename "${tmpScrBW_RedText}"`
+            cp "${tmpScrBW_GreenText}"  "${bkpDir}""/"$screentime"-"`basename "${tmpScrBW_GreenText}"`
+            cp "${tmpScrBW_WhiteText}"  "${bkpDir}""/"$screentime"-"`basename "${tmpScrBW_WhiteText}"`
+            cp "${tmpOCR_MobsMessages}" "${bkpDir}""/"$screentime"-"`basename "${tmpOCR_MobsMessages}"`
+            cp "${tmpOCR_ChatPrompt}"   "${bkpDir}""/"$screentime"-"`basename "${tmpOCR_ChatPrompt}"`
+        fi
+    done
 
     if $TEST_MODE ; then exit 0 ; fi
 
